# core-eng

./: .gitignore  Cargo.toml  Flow  README.md
.github/workflows/: rust.yml
degen-base-coordinator/: Cargo.toml
degen-base-coordinator/src/: coordinator.rs  lib.rs  main.rs
degen-base-signer/: Cargo.toml
degen-base-signer/logs/: malicious_coordinator_no_pox_transaction.txt  malicious_coordinator_signer_1.txt  malicious_coordinator_signer_2.txt  malicious_coordinator_signer_3.txt
degen-base-signer/src/: bitcoin_node.rs  bitcoin_scripting.rs  bitcoin_wallet.rs  config.rs  lib.rs  main.rs  peg_wallet.rs  signer.rs  signing_round.rs  stacks_wallet.rs  state_machine.rs  util_versioning.rs
degen-base-signer/src/peg_queue/: mod.rs  sqlite_peg_queue.rs
degen-base-signer/src/stacks_node/: client.rs  mod.rs
degen-base-signer/tests/: messages.rs  net.rs
degen-coordinator/: Cargo.toml
degen-coordinator/conf/: coordinator.toml
degen-coordinator/src/: bitcoin_node.rs  bitcoin_wallet.rs  cli.rs  config.rs  coordinator.rs  main.rs  peg_wallet.rs
degen-coordinator/src/stacks_node/: client.rs
degen-signer/: Cargo.toml
degen-signer/conf/: signer.toml
degen-signer/src/: main.rs
degen-superior-coordinator/: Cargo.toml
degen-superior-coordinator/conf/: coordinator.toml  signer.toml
degen-superior-coordinator/src/: config.rs  coordinator.rs  lib.rs  main.rs  util.rs
degen-superior-coordinator/src/stacks_node/: client.rs  mod.rs
degen-superior-coordinator/tests/: local_bitcoin_node.rs
degen-superior-signer/: Cargo.toml  README.md
degen-superior-signer/conf/: signer1.toml  signer2.toml  signer3.toml
degen-superior-signer/src/: lib.rs  main.rs  signer.rs
degen-superior-signer/tests/: cli.rs
first-build/: Cargo.toml
first-build/src/: helper.rs  main.rs
frost-coordinator/src/: coordinator.rs
frost-signer/src/: signer.rs  signing_round.rs
sbtc-ops/smart-contract/: Clarinet.toml
sbtc-ops/smart-contract/contracts/: mining-pool-5-blocks.clar  mining-pool.clar  trait-sip-010-sbtc.clar
sbtc-ops/smart-contract/deployments/: default.devnet-plan.yaml
sbtc-ops/smart-contract/settings/: Devnet.toml
stacks-blockchain/: Cargo.toml
test-utils/src/: lib.rs
utils/automations/: fund-btc.sh  fund.sh
utils/frost-test/: Cargo.toml
utils/frost-test/src/: sync_test.rs
utils/frost-test/tests/: pure_frost.rs
utils/misc/btctool/btctool/: meat.py
utils/sbtc-mini/deployments/: signer-3-vote.devnet-plan.yaml  user-1-deposit.devnet-plan.yaml
utils/stacks-dev-guide/: guide.md
