[package]
name = "degen-base-coordinator"
version = "0.0.1"
license = "GPLv3"
homepage = "https://github.com/Trust-Machines/core-eng"
repository = "https://github.com/Trust-Machines/core-eng"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
p256k1 = { workspace = true }
stackslib = { workspace = true }
wsts = { workspace = true }
backoff = { workspace = true }
clap = { workspace = true }
hashbrown = { workspace = true }
thiserror = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
degen-base-signer = { path = "../degen-base-signer" }
serde = { version = "1.0", features = ["serde_derive"] }
bitcoin.workspace = true
url = { workspace = true }

[dev-dependencies]
rand_core = { workspace = true }
rand = { workspace = true }
relay-server = { path = "../relay-server" }
test-utils = { path = "../test-utils" }

[lib]
path = "src/lib.rs"    # The source file of the target
crate-type = ["lib"]   # The crate types to generate

[[bin]]
name = "degen-base-coordinator"
path = "src/main.rs"
