[package]
name = "degen-base-signer"
version = "0.0.1"
license = "GPLv3"
homepage = "https://degenlab.io"
repository = "https://github.com/stacks-degens/core-eng"
edition = "2021"

[lib]
path = "src/lib.rs"    # The source file of the target.
crate-type = ["lib"]   # The crate types to generate.

[dependencies]
stackslib = { workspace = true }
rusqlite = { workspace = true }
serde_json = { workspace = true }
aes-gcm = { workspace = true }
backoff = { workspace = true }
bincode = { workspace = true }
clap = { workspace = true }
p256k1 = { workspace = true }
wsts = { workspace = true }
hashbrown = { workspace = true }
itertools = { workspace = true }
mockall = "0.11.3"
rand_core = { workspace = true }
serde = { workspace = true }
sha2 = { workspace = true }
thiserror = { workspace = true }
toml = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
ureq = { workspace = true }
rand = { workspace = true }
bdk.workspace = true
bitcoin.workspace = true
url = { workspace = true }
hex.workspae = true
reqwest = { version = "0.11.14", features = ["blocking", "json"] }
chrono = "0.4.29"