[package]
name = "degen-coordinator"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
wsts = { workspace = true }
thiserror = { workspace = true }
tracing = { workspace = true }
frost-signer = { path = "../frost-signer" }
frost-coordinator = { path = "../frost-coordinator" }
serde = { version = "1.0", features = ["serde_derive"] }
bitcoin={ version = "0.29.1", features=["rand","std"]}
